Layout bugfixes

--- a/css/default.css
+++ b/css/default.css
@@ -6,15 +6,15 @@ html {
     color: white;
     background-color: black;
 
-    width: 100vw;
-    height: 100vh;
+    width: calc(100% - 32px);
+    height: 100%;
 
     scrollbar-color: white black;
     scrollbar-width: thin;
 }
 
 .container {
-    wdith: 100%;
+    width: 100%;
     height: 100%;
 }
 
@@ -26,10 +26,10 @@ html {
 }
 
 .username {
-    top: 5vh;
-    left: 5vw;
-    width: 90vw;
-    height: 90vh;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: 90%;
     display: flex;
     font-size: 64px;
     align-items: center;
@@ -50,8 +50,8 @@ html {
 }
 
 .link-container {
-    width: 100vw;
-    height: 50vh;
+    width: 100%;
+    height: 42%;
     display: flex;
     align-items: center;
     justify-content: space-around;
